--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://db:5432/bw_app
+spring.datasource.url=jdbc:postgresql://localhost:5432/bw_app
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
