--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,15 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  frontend:
+    build:
+      context: ./frontend
+    container_name: react-frontend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    command: ["npm", "start"]
+
 volumes:
   pgdata:
